--- a/style.css
+++ b/style.css
@@ -1068,7 +1068,7 @@ content > .community > .reviews {
 content > .community > .reviews > .review_contaniner {
     display: flex;
     width: 100%;
-    height: 75vh;
+    height: fit-content;
     padding: 0% 6%;
     justify-content: space-between;
 }
@@ -1091,7 +1091,7 @@ content > .community > .reviews > .review_contaniner {
     margin: auto;
     column-gap: 1%;
     width: 450%;
-    height: 150%;
+    height: fit-content;
     animation: scroll 25s linear 2s infinite ;
 }
 @keyframes scroll {
@@ -1167,8 +1167,8 @@ content > .community > .reviews > .review_contaniner {
     flex-direction: column;
     align-items: center;
     position: relative;
-    height: 60vh;
-    background-color:  #2DF8C5;
+    height: 65vh;
+    background-color:#2DF8C5;
     border-radius: 65px 65px 0px 0px;
     padding: 5%;
 }
@@ -1179,7 +1179,7 @@ content > .community > .reviews > .review_contaniner {
     position: absolute;
     color: white;
     font-size: 36px;
-    top: 24%;
+    top: 23%;
     left: 43%;
 }
 .content > div > .top_container > .top > span > a > i:hover,.top > img:hover {
@@ -1196,7 +1196,6 @@ content > .community > .reviews > .review_contaniner {
     margin-top: 7%;
     font-size: 20px;
     line-height: 30px;
-    padding-bottom: 25px;
 }
 .content > div > .top_container > .bottom {
     display: flex;
@@ -1204,8 +1203,8 @@ content > .community > .reviews > .review_contaniner {
     align-items: center;
     position: relative;
     background-color: #DAF1EA;
+    padding-bottom: 5%;
     border-radius: 0px 0px 65px 65px ;
-    height: 15vh;
 }
 .content > div > .top_container > .bottom > p {
     padding-top: 3%;
@@ -1220,13 +1219,14 @@ content > .community > .reviews > .review_contaniner {
     width: 50px;
     background-color: #DAF1EA;
     position: absolute;
-    top: 117%;
+    top: 118%;
     border-radius: 10px;
     transform: rotateZ(45deg);
 }
 .content > div > .bottom_container {
-    margin-top: 12%;
-    height: 6%;
+    margin-top: 14%;
+    height: 8%;
+    padding: 8%;
     background-color: #DAF1EA;
     border-radius: 50px;
     display: flex;
@@ -1262,7 +1262,7 @@ content > .community > .reviews > .review_contaniner {
 }
 .community > .book_btn {
     text-align: center;
-    margin-top: 18%;
+    margin-top: 6%;
 }
 .certification > .certificate{
     display: flex;
