--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body  nav > .topic > a:last-child:hover{
     background-color: darkgreen;
 }
 content > home {
-    margin: 37px 8% 3% 9%;
+    margin: 37px 8% 1% 9%;
     display: flex;
     column-gap: 4%;
 }
@@ -153,9 +153,6 @@ home > .left_container > .details , .score > .details {
     background-color: #F2FBF7;
     border-radius: 20px;
 }
-home > .left_container > .details > div, .score > .details > div {
-    width: 18%;
-}
 .score  {
     display: flex;
     flex-direction: column;
@@ -166,7 +163,10 @@ home > .left_container > .details > div, .score > .details > div {
     width: 50%;
     margin-bottom: 5%;
 }
-home > .left_container > .details > div , .score >  .details > div {
+.score > .book_btn > button {
+    width: 120%;
+}
+home > .left_container > .details > div , .score > .details > div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,6 +174,7 @@ home > .left_container > .details > div , .score >  .details > div {
     border-left: 1px rgba(128, 128, 128, 0.299) solid;
     height: fit-content;
     padding-bottom: 2%;
+    width: 10em;
     
 }
 home > .left_container > .details > div > h1, .score > .details > div > h1 {
