--- a/style.css
+++ b/style.css
@@ -195,11 +195,11 @@ home > .right_container {
     border-radius: 20px;
     position: relative;
     z-index: 0;
-    width: 500px;
+    width: 50%;
     padding: 3% 2%;
     box-shadow:0px 0px 4px 0px rgb(220, 220, 220);
     margin-top: 10px;
-    height: 530px;
+    height:fit-content;
     background-color: #e8f4f4;
 }
 home > .right_container > div > input ,home > .right_container > div > select,home > .right_container > div > button{
